<resources>
    <string name="app_name">給你膚膚</string>
    <string name="edit_message">Enter your name</string>
    <string name="button_send">Start</string>
    <string name="SkinDiscuss">膚況檢測</string>
    <string name="SkinNeeds">肌膚需求</string>
    <string name="S_function">功能分類</string>
    <string name="S_brand">品牌分類</string>
    <string name="S_price">價格分類</string>
    <string name="S_process">tips 正確保養程序</string>
    <string name="S_recommendation">產品推薦</string>

    <string name="SkinDiscuss_q1">自己的臉頰皮膚狀況</string>
    <string name="SkinDiscuss_a11">經常覺得油</string>
    <string name="SkinDiscuss_a12">輕度出油、偶爾出油</string>
    <string name="SkinDiscuss_a13">不易出油且無緊繃感</string>
    <string name="SkinDiscuss_a14">皮膚較乾燥，無使用面霜易有緊繃感</string>

    <string name="SkinDiscuss_q2">早晨洗臉保養後的一日的臉頰情況</string>
    <string name="SkinDiscuss_a21">全臉都很油</string>
    <string name="SkinDiscuss_a22">沒有出油也沒有乾燥</string>
    <string name="SkinDiscuss_a23">皮膚乾燥緊繃</string>
    <string name="SkinDiscuss_a24">僅 T 字部位出油</string>

    <string name="SkinDiscuss_q3">若不使用乳液面霜等產品的臉頰狀態</string>
    <string name="SkinDiscuss_a31">不使用面霜也出油</string>
    <string name="SkinDiscuss_a32">使用面霜易出油，乳液則還能接受</string>
    <string name="SkinDiscuss_a33">不油也不乾</string>
    <string name="SkinDiscuss_a34">不用面霜臉頰感覺乾燥</string>
    <string name="SkinDiscuss_a35">使用面霜後臉頰仍感到乾燥</string>

    <string name="SkinDiscuss_q4">最常遇到的肌膚問題</string>
    <string name="SkinDiscuss_a41">晚上會比白天出油明顯即暗沉</string>
    <string name="SkinDiscuss_a42">細紋困擾，甚至有時候會起皮</string>
    <string name="SkinDiscuss_a43">經常會有嚴重粉刺、痘痘的困擾</string>
    <string name="SkinDiscuss_a44">沒有以上問題</string>

    <string name="DiscussFinal_Oil">油性肌膚</string>
    <string name="Oil_info">肌膚表面油膩，皮脂腺機能分泌過於旺盛。</string>
    <string name="DiscussFinal_Mix">混和性肌膚</string>
    <string name="Mid_info">油脂與汗水分泌正常、肌膚嬌嫩、細膩有彈性。</string>
    <string name="DiscussFinal_Mid">中性肌膚</string>
    <string name="Mix_info">肌膚表面同時存在容易出油又容易乾燥的部位。</string>
    <string name="DiscussFinal_Dry">乾性肌膚</string>
    <string name="Dry_info">肌膚表面油脂、水分分泌不足、乾燥失去柔軟性。</string>

    <string name="SkinFeature">皮膚特徵</string>
    <string name="ProdRecommend">查看適合我的商品</string>

    <string name="nav_drawer_open">開起選單</string>
    <string name="nav_drawer_close">關閉選單</string>

    <string name="molecule_name">Brand</string>

    <string-array name="brand">
        <item>A-Derma 艾芙美</item>
        <item>Aesop</item>
        <item>AHC</item>
        <item>Apivita</item>
        <item>Aveda</item>
        <item>Aveeno</item>
        <item>Avene 雅漾</item>
        <item>Bioderma 貝膚黛瑪</item>
        <item>Bioneo 德國百妮</item>
        <item>Biotherm 碧兒泉</item>
        <item>Bobbi Brown</item>
        <item>CeraVe</item>
        <item>Cetaphil 舒特膚</item>
        <item>Clairs 克蘭詩</item>
        <item>Clinique 倩碧</item>

        <item>Darphin</item>
        <item>DermEden 得美登</item>
        <item>DF 美肌醫生</item>
        <item>Diptyque</item>
        <item>D program 敏感話題</item>
        <item>Dr.Cink 達特聖克</item>
        <item>Dr.Douxi 朵璽</item>
        <item>Dr.Hsieh 達特醫</item>
        <item>Dr.Huang 黃禎憲</item>
        <item>Dr.May 美博士</item>
        <item>Dr.Wu 達爾膚</item>
        <item>Elemis</item>
        <item>Elxir</item>
        <item>Elizabeth Arden 伊莉莎白</item>
        <item>Estee Lauter 雅詩蘭黛</item>
        <item>First Aid Beauty</item>
        <item>For Beloved One 寵愛之名</item>
        <item>Helena Rubinstein</item>
        <item>Ipsa</item>
        <item>Jo Malone</item>
        <item>Kafen</item>
        <item>Kanebo 佳麗寶</item>
        <item>Kerastase 巴黎卡詩</item>
        <item>Kiehls 契爾氏</item>
        <item>Klorane</item>
        <item>Kose</item>
        <item>L Occitane 歐舒丹</item>
        <item>La Mer 海洋拉娜</item>
        <item>La Roche-Posay 理膚寶水</item>
        <item>Lancome 蘭蔻</item>
        <item>Laneige 蘭芝</item>
        <item>Muji 無印良品</item>
        <item>Neogence 霓淨思</item>
        <item>Neutroguna 露得清</item>
        <item>Olay</item>
        <item>O right 歐萊德</item>
        <item>Origins 品木宣言</item>
        <item>Paulas Choice 寶拉珍選</item>
        <item>Revital 莉薇特麗</item>
        <item>Revive</item>
        <item>Sebamed 施巴</item>
        <item>Shiseido 資生堂</item>
        <item>Shu uemera 植村秀</item>
        <item>Sisley 希思黎</item>
        <item>SK-II</item>
        <item>Sulwhasoo 雪花秀</item>
        <item>Swissvita 薇佳</item>
        <item>TTM 提提妍</item>
        <item>Tunemakers</item>
        <item>Vitchy 薇姿</item>
        <item>Whoo 后</item>
        <item>YSL</item>
        <item>台塑生醫</item>

    </string-array>
</resources>