<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c6b6a5"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".discuss_final_mix">

    <ImageView
        android:id="@+id/mixPic"
        android:layout_width="273dp"
        android:layout_height="209dp"
        android:src="@drawable/mix" />

    <TextView
        android:id="@+id/mix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/DiscussFinal_Mix"
        android:textColorHint="#9e6967"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/mixInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/Mix_info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/skin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/SkinFeature"
        android:textColorHint="#454141"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/mixGuild"
        android:layout_width="200dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:text="肌膚T字部位與兩頰分別有出遊及乾燥感鼻翼兩旁的毛孔較粗大。"
        android:textColorHint="#9A8D7F" />

    <Button
        android:id="@+id/shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/ProdRecommend"
        android:textSize="20sp" />

</LinearLayout>