<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c6b6a5"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".discuss_final_oil">

    <ImageView
        android:id="@+id/oilPic"
        android:layout_width="273dp"
        android:layout_height="209dp"
        android:src="@drawable/oil"></ImageView>

    <TextView
        android:id="@+id/oil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/DiscussFinal_Oil"
        android:textColorHint="#9e6967"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/oilInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/Oil_info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/skin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/SkinFeature"
        android:textColorHint="#454141"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/oilGuild"
        android:layout_width="200dp"
        android:layout_height="68dp"
        android:layout_marginTop="10dp"
        android:text="肌膚有明顯出油感，皮脂分泌旺盛 毛孔粗大、膚色較為黯沉。"
        android:textColorHint="#9A8D7F" />

    <Button
        android:id="@+id/shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/ProdRecommend"
        android:textSize="20sp" />

</LinearLayout>